@@ -1,5 +1,6 @@
 #!/usr/bin/python
 from omuscat import *
+from apitest import *
 
 foo = OmStem("english")
 
@@ -41,69 +42,6 @@ print mset.items
 match_terms = enq.get_matching_terms(mset.items[0][0])
 print match_terms
 
-def get_simple_database():
-    mydb = OmDatabaseGroup()
-    mydb.add_database("sleepycat", ["/home/cemerson/working/open-muscat/build/om-debug-valis/tests/.sleepy/db=apitest_simpledata="])
-    return mydb
-
-def init_simple_enquire(enq):
-    enq.set_query(OmQuery("thi"))
-
-def print_mset_percentages(mset):
-    items = mset.items
-    for i in range(len(items)):
-        print " ",
-	print mset.convert_to_percent(items[i][1]),
-
-def test_pctcutoff1():
-    success = 1
-
-    enquire = OmEnquire(get_simple_database())
-    init_simple_enquire(enquire)
-
-    mymset1 = enquire.get_mset(0, 100)
-
-    print "Original mset pcts:",
-    print_mset_percentages(mymset1)
-    print
-
-    num_items = 0;
-    my_pct = 100;
-    changes = 0;
-    mymset1items = mymset1.items
-    for i in range(len(mymset1items)):
-        new_pct = mymset1.convert_to_percent(mymset1items[i][1]);
-        if (new_pct != my_pct):
-	    changes = changes + 1
-	    if (changes <= 3):
-	        num_items = i
-		my_pct = new_pct
-
-    if (changes <= 3):
-	success = 0
-	print "MSet not varied enough to test"
-
-    print "Cutoff percent: ", my_pct
-    
-    mymopt = OmMatchOptions()
-    mymopt.set_percentage_cutoff(my_pct)
-    mymset2 = enquire.get_mset(0, 100, "NULL", mymopt)
-
-    print "Percentages after cutoff:",
-    print_mset_percentages(mymset2)
-    print
-    
-    mymset2items = mymset2.items
-    if (len(mymset2items) < num_items):
-        success = 0
-	print "Match with % cutoff lost too many items"
-    elif (len(mymset2items) > num_items):
-        for i in range(num_items, len(mymset2items)):
-	    if (mymset2.convert_to_percent(mymset2.items[i]) != my_pct):
-	        success = 0
-		print "Match with % cutoff returned  too many items"
-		break
-
-    return success
-
 print test_pctcutoff1()
+print test_collapsekey1()
+print test_expandmaxitems1()
